# task-tracker

./: .gitignore  CHANGELOG.md  Cargo.toml  DASHBOARD_GUIDE.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  LICENSE  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QWEN.md  README.md  RELEASE.md  RELEASE_GUIDE.md  RELEASE_NOTES_v0.3.0.md  SETUP.md  STITCH_SETUP.md  build_err.txt  full_build.txt  setup-stitch.bat  stderr.txt
.github/workflows/: ci-cd.yml  release.yml
benches/: performance.rs
docs/: templates.md  troubleshooting.md
planning/: PROJECT.md  REQUIREMENTS.md  RESEARCH.md  ROADMAP.md  STATE.md
planning/phases/01-mvp/: CONTEXT.md  DATA_MODELS.md  DESIGN.md  IMPLEMENTATION.md  PLAN.md  SUMMARY.md  TASKS_2_4_SUMMARY.md  TASK_1_SUMMARY.md
planning/phases/03-distribution/: PLAN.md  RESEARCH.md  TASK_3_1_SUMMARY.md  TASK_3_2_SUMMARY.md  TASK_3_3_SUMMARY.md  TASK_3_4_SUMMARY.md  TASK_3_5_SUMMARY.md
planning/reports/: progress-2026-03-28-actions-failure.md
src/: error.rs  lib.rs  main.rs
src/api/: mod.rs  routes.rs  state.rs
src/api/handlers/: mod.rs  tasks.rs
src/cli/: args.rs  commands.rs  format.rs  mod.rs
src/dashboard/: mod.rs  views.rs
src/dashboard/templates/: index.html
src/models/: config.rs  mod.rs  task.rs  week.rs
src/reports/: mod.rs  templates.rs  weekly.rs
src/reports/templates/: daily_log.j2  weekly_report.j2
src/search/: index.rs  mod.rs  query.rs  simple.rs
src/storage/: log.rs  mod.rs  task.rs  workspace.rs
test-workspace/projects/work/: project.toml
test-workspace/projects/work/tasks/2026/03/: tt-000001.toml
test-workspace2/: tt.toml
test-workspace2/projects/work/logs/2026/: 2026-03-28.md
test-workspace2/projects/work/reports/weekly/: 2026-W13.md
test-workspace2/projects/work/tasks/2026/03/: tt-000001.toml
tests/: integration_tests.rs
