[package]
name = "tt"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Git-friendly personal task tracking CLI"
repository = "https://github.com/yourusername/tt"
keywords = ["cli", "task", "productivity", "rust"]
categories = ["command-line-utilities"]

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# TOML
toml = "0.8"
toml_edit = "0.22"
toml_datetime = "0.6"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Markdown parsing
pulldown-cmark = "0.10"

# Templates
minijinja = { version = "2.0", features = ["loader"] }

# Embed default templates
include_dir = "0.7"

# Regex
regex = "1.10"
once_cell = "1.19"

# File operations
fs2 = "0.4"
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
slug = "0.1"

# Web framework (Dashboard)
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
http = "1.1"

# Search (simple regex-based, tantivy disabled due to zstd conflict)
# tantivy = { version = "0.20", default-features = false, features = ["mmap"] }

[dev-dependencies]
# Snapshot testing
insta = { version = "1.38", features = ["yaml", "json"] }

# Test utilities
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

# Benchmarks
criterion = "0.5"

# Property-based testing
proptest = "1.4"

[[bench]]
name = "performance"
harness = false
